# Peggy

./: .gitignore  Main.hs  README.md  _config.yml  about.html  about.md  example.html  example.md  hakyll.hs  index.html  index.md  peggy.cabal  syntax.html  syntax.md  tutorial.html  tutorial.md
Text/: Peggy.hs
Text/Peggy/: CodeGen.hs  LeftRec.hs  Normalize.hs  Parser.hs  Prim.hs  PrimST.hs  Quote.hs  SrcLoc.hs  Syntax.hs
Text/Peggy/CodeGen/: TH.hs
_layouts/: default.html
attic/: STParser.hs
bootstrap/: Bootstrap.hs  README.md  Stage1.hs  Stage2.hs  bootstrap.css  peggy.peggy
bootstrup/: Bootstrup.hs  README.md  Stage1.hs  peggy.peggy
css/: default.css
example/: Arith.hs  Comment.hs  Json.hs  Loc.hs  Main.hs  Named.hs  Peggy.hs  Tensor.hs  TensorQQ.hs  Test.hs  arith.peggy  peggy.peggy
haddock/: Text-Peggy-CodeGen-TH.html  Text-Peggy-LeftRec.html  Text-Peggy-Normalize.html  Text-Peggy-Parser.html  Text-Peggy-Prim.html  Text-Peggy-Quote.html  Text-Peggy-SrcLoc.html  Text-Peggy-Syntax.html  Text-Peggy.html  doc-index.html  index-frames.html  index.html  mini_Text-Peggy-CodeGen-TH.html  mini_Text-Peggy-LeftRec.html  mini_Text-Peggy-Normalize.html  mini_Text-Peggy-Parser.html  mini_Text-Peggy-Prim.html  mini_Text-Peggy-Quote.html  mini_Text-Peggy-SrcLoc.html  mini_Text-Peggy-Syntax.html  mini_Text-Peggy.html  peggy.haddock
ja/: about.html  example.html  example.md  index.html  index.md  syntax.html  syntax.md  tutorial.html  tutorial.md
templates/: default.hamlet
