Name:                peggy
Version:             0.2.0
Synopsis:            The Parser Generator for Haskell

Description:         The Parser Generator for Haskell

Homepage:            http://github.com/tanakh/peggy
License:             BSD3
License-file:        LICENSE
Author:              Hideyuki Tanaka
Maintainer:          Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Copyright:           Copyright (c)2011, Hideyuki Tanaka
Category:            Language
Build-type:          Simple

Extra-source-files:  README.md
                     bootstrup/README.md
                     bootstrup/Stage1.hs
                     bootstrup/Stage2.hs
                     bootstrup/Bootstrup.hs
                     bootstrup/peggy.peggy

Cabal-version:       >=1.8

Library
  Exposed-modules:     Text.Peggy
                     , Text.Peggy.CodeGen.TH
                     , Text.Peggy.LeftRec
                     , Text.Peggy.Normalize
                     , Text.Peggy.Parser
                     , Text.Peggy.Prim
                     , Text.Peggy.Quote
                     , Text.Peggy.SrcLoc
                     , Text.Peggy.Syntax
  
  Build-depends:       base >= 4 && < 5
                     , mtl >= 2.0 && < 2.1
                     , ListLike >= 3.1 && < 3.2
                     , hashtables >= 1.0 && < 1.1
                     , monad-control >= 0.2 && < 0.3
                     , template-haskell >= 2.5 && < 2.7
                     , haskell-src-meta >= 0.5 && < 0.6
  
  -- Other-modules:       
  
Executable peggy
  Main-is:             Main.hs

  Build-depends:       base >= 4 && < 5
                     , mtl >= 2.0 && < 2.1
                     , ListLike >= 3.1 && < 3.2
                     , hashtables >= 1.0 && < 1.1
                     , monad-control >= 0.2 && < 0.3
                     , template-haskell >= 2.5 && < 2.7
                     , haskell-src-meta >= 0.5 && < 0.6

Source-repository head
  Type:              git
  Location:          git://github.com/tanakh/Peggy.git
